@@ -115,8 +115,7 @@ public class Search implements StaplerProxy {
         List<Ancestor> l = req.getAncestors();
         for (int i = l.size() - 1; i >= 0; i--) {
             Ancestor a = l.get(i);
-            if (a.getObject() instanceof SearchableModelObject) {
-                SearchableModelObject smo = (SearchableModelObject) a.getObject();
+            if (a.getObject() instanceof SearchableModelObject smo) {
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.fine(String.format("smo.displayName=%s, searchName=%s", smo.getDisplayName(), smo.getSearchName()));
                 }
@@ -263,8 +262,7 @@ public class Search implements StaplerProxy {
     private SearchIndex makeSuggestIndex(StaplerRequest2 req) {
         SearchIndexBuilder builder = new SearchIndexBuilder();
         for (Ancestor a : req.getAncestors()) {
-            if (a.getObject() instanceof SearchableModelObject) {
-                SearchableModelObject smo = (SearchableModelObject) a.getObject();
+            if (a.getObject() instanceof SearchableModelObject smo) {
                 builder.add(smo.getSearchIndex());
             }
         }
@@ -377,7 +375,7 @@ public class Search implements StaplerProxy {
 
         // couldn't find an item with the query in the url so just
         // return the first one
-        return r.get(0);
+        return r.getFirst();
     }
 
     /**
@@ -399,7 +397,7 @@ public class Search implements StaplerProxy {
             return null;
         }
         else if (1 == r.size()) {
-            return r.get(0);
+            return r.getFirst();
         }
         else  {
             // we have more than one suggested item, so return the item who's url
