@@ -24,6 +24,7 @@
 
 package hudson.tasks;
 
+import static hudson.model.WindowsUtil.isWindowsSymlinkSupported;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.lessThan;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
@@ -220,7 +221,7 @@ class ArtifactArchiverTest {
         assumeTrue(ws.child("dir/lodge").exists(), "May not be testable on Windows:\n" + JenkinsRule.getLog(b));
         List<FreeStyleBuild.Artifact> artifacts = b.getArtifacts();
         assertEquals(1, artifacts.size());
-        FreeStyleBuild.Artifact artifact = artifacts.get(0);
+        FreeStyleBuild.Artifact artifact = artifacts.getFirst();
         assertEquals("dir/lodge", artifact.relativePath);
         VirtualFile[] kids = b.getArtifactManager().root().child("dir").list();
         assertEquals(1, kids.length);
@@ -281,6 +282,7 @@ class ArtifactArchiverTest {
     @Issue("SECURITY-162")
     @Test
     void outsideSymlinks() throws Exception {
+        assumeTrue(!Functions.isWindows() || isWindowsSymlinkSupported());
         final FreeStyleProject p = j.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
             @Override public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
@@ -296,7 +298,7 @@ class ArtifactArchiverTest {
         FreeStyleBuild b = j.buildAndAssertSuccess(p);
         List<FreeStyleBuild.Artifact> artifacts = b.getArtifacts();
         assertEquals(1, artifacts.size());
-        FreeStyleBuild.Artifact artifact = artifacts.get(0);
+        FreeStyleBuild.Artifact artifact = artifacts.getFirst();
         assertEquals("hack", artifact.relativePath);
         VirtualFile[] kids = b.getArtifactManager().root().list();
         assertEquals(1, kids.length);
@@ -519,6 +521,7 @@ class ArtifactArchiverTest {
     @Test
     @Issue("JENKINS-55049")
     void lengthOfArtifactIsCorrect_eventForInvalidSymlink() throws Exception {
+        assumeTrue(!Functions.isWindows() || isWindowsSymlinkSupported());
         FreeStyleProject p = j.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
             @Override public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
@@ -545,7 +548,7 @@ class ArtifactArchiverTest {
         artifacts.sort(Comparator.comparing(Run.Artifact::getFileName));
 
         // invalid symlink => size of 0
-        FreeStyleBuild.Artifact artifact = artifacts.get(0);
+        FreeStyleBuild.Artifact artifact = artifacts.getFirst();
         assertEquals("dir/_nonexistant", artifact.relativePath);
         assertEquals(0, artifact.getFileSize());
         assertEquals("", artifact.getLength());
